# mbt

./: mkdocs.yml  pyproject.toml
docs/: index.md  install.md  mbtproject.md  usage.md
mbt/: build.py  collect.py  config.py
microbuildtool/: build.py  cli.py  collect.py  config.py
